# MiniRHI

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  debug_file.rdbg  launch.json
android/: CMakeLists.txt  glue.cpp  glue.hpp  main.cpp
android/apk/: AndroidManifest.xml  resources.arsc
android/apk_raw/: AndroidManifest.xml
android/apk_raw/res/values/: strings.xml
android/cnfg/: CNFGEGLDriver.c
include/: dummy.hpp
include/Core/: Core.hpp
include/MiniRHI/: Buffer.hpp  CmdCtx.hpp  Format.hpp  MiniRHI.hpp  PipelineState.hpp  RC.hpp  RenderCommands.hpp  Shader.hpp  Storage.hpp  Texture.hpp  TypeInference.hpp
lib/: Buffer.cpp  CMakeLists.txt  CmdCtx.cpp  Format.cpp  MiniRHI.cpp  RenderCommands.cpp  Shader.cpp  Texture.cpp  dummy.cpp
test/: CMakeLists.txt  shader.frag  shader.vert  test.cpp
test/HelloTriangle/: CMakeLists.txt  main.cpp
test/Rendering3D/: CMakeLists.txt  main.cpp
test/Support/: App.cpp  App.hpp  CMakeLists.txt  Camera.hpp
